--- a/app/src/main/res/drawable/circle_white_back.xml
+++ b/app/src/main/res/drawable/circle_white_back.xml
@@ -2,15 +2,13 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#ffffff"/>
+            <solid android:color="@color/White"/>
             <size android:height="36dp"/>
             <size android:width="36dp"/>
         </shape>
     </item>
     <item
         android:drawable="@drawable/icon_back_green"
-        android:width="20dp"
-        android:height="20dp"
         android:gravity="center">
     </item>
 
