--- a/app/src/main/res/layout/fragment_add_route_map.xml
+++ b/app/src/main/res/layout/fragment_add_route_map.xml
@@ -15,7 +15,7 @@
             android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:background="@color/colorPrimary"
+            tools:background="@color/Primary"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp" />
 
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="출발"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/White"
             android:textSize="8sp"
             android:letterSpacing="-0.12"
             app:notoTextStyle="regular"
@@ -113,7 +113,7 @@
                 android:onClick="@{mapSearchfrag::onStartClick}"
                 android:singleLine="true"
                 android:text="출발지를 입력해주세요."
-                android:textColor="@color/colorTextGray"
+                android:textColor="@color/TextGray"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_start"
                 app:layout_constraintEnd_toEndOf="@id/layout_location"
@@ -154,7 +154,7 @@
                 android:onClick="@{mapSearchfrag::onEndClick}"
                 android:singleLine="true"
                 android:text="도착지를 입력해주세요."
-                android:textColor="@color/colorTextGray"
+                android:textColor="@color/TextGray"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_end"
                 app:layout_constraintEnd_toEndOf="@id/tv_start"
