--- a/app/src/main/res/layout/fragment_done.xml
+++ b/app/src/main/res/layout/fragment_done.xml
@@ -35,7 +35,7 @@
             android:layout_marginTop="22dp"
             android:text="@string/tv_done_reg"
             android:textSize="18sp"
-            android:textColor="#565b59"
+            android:textColor="@color/TextBlack"
             android:letterSpacing="-0.05"
             app:notoTextStyle="medium"
             app:layout_constraintTop_toBottomOf="@id/iv_done"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:text="@string/tv_continue"
             android:textSize="14sp"
-            android:textColor="#565b59"
+            android:textColor="@color/TextBlack"
             android:letterSpacing="-0.05"
             app:notoTextStyle="regular"
             app:layout_constraintTop_toBottomOf="@id/tv_done"
@@ -65,7 +65,7 @@
             android:background="@drawable/round_green"
             android:text="@string/bt_done_reg"
             android:textSize="16sp"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/White"
             app:notoTextStyle="medium"
             app:layout_constraintTop_toBottomOf="@id/guideline1"
             app:layout_constraintStart_toStartOf="parent"
