--- a/app/src/main/res/layout/fragment_find_password.xml
+++ b/app/src/main/res/layout/fragment_find_password.xml
@@ -49,7 +49,7 @@
             style="@style/btStyle"
             android:background="@drawable/round_green"
             android:text="@string/bt_IssuePass_find"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/White"
             android:textSize="16sp"
             app:notoTextStyle="medium"
             app:layout_constraintBottom_toBottomOf="parent"
