--- a/app/src/main/res/layout/fragment_intro_base.xml
+++ b/app/src/main/res/layout/fragment_intro_base.xml
@@ -33,7 +33,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:onClick="@{intro::onLaterClick}"
             android:text="@string/bt_intro_later"
-            android:textColor="#6d7278"
+            android:textColor="@color/TextGray"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -97,7 +97,7 @@
             android:background="@drawable/round_green"
             android:text="@string/bt_intro_start"
             android:visibility="invisible"
-            android:textColor="#ffffff"
+            android:textColor="@color/White"
             app:notoTextStyle="bold"
             app:layout_constraintWidth_percent="0.55"
             app:layout_constraintBottom_toBottomOf="parent"
