--- a/app/src/main/res/layout/fragment_register_verification.xml
+++ b/app/src/main/res/layout/fragment_register_verification.xml
@@ -100,7 +100,7 @@
                 android:id="@+id/hyphen"
                 android:layout_width="20dp"
                 android:layout_height="1dp"
-                android:background="@color/colorTextGray"
+                android:background="@color/TextGray"
                 app:layout_constraintBottom_toBottomOf="@id/layout_idNum"
                 app:layout_constraintEnd_toEndOf="@id/layout_idNum"
                 app:layout_constraintStart_toStartOf="@id/layout_idNum"
@@ -225,7 +225,7 @@
             android:text="03:00"
             android:letterSpacing="0.15"
             android:textSize="14sp"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/Primary"
             app:layout_constraintTop_toTopOf="@id/et_code"
             app:layout_constraintEnd_toEndOf="@id/et_code"
             app:layout_constraintBottom_toBottomOf="@id/et_code"
