--- a/app/src/main/res/layout/fragment_request_town_service.xml
+++ b/app/src/main/res/layout/fragment_request_town_service.xml
@@ -76,7 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cb_town_message"
-            android:button="@drawable/checkbox_round_sel"
+            android:button="@drawable/checkbox_round"
             app:layout_constraintTop_toBottomOf="@id/cl_townSel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
