--- a/app/src/main/res/drawable/checkbox_rect.xml
+++ b/app/src/main/res/drawable/checkbox_rect.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <size android:height="16dp"/>
-            <size android:width="16dp"/>
-            <solid android:color="#ffffff"/>
-            <stroke android:width="1dp" android:color="#9b9b9b"/>
-            <corners android:radius="4dp" />
-        </shape>
-    </item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@drawable/icon_check_green"
-        android:gravity="center">
-    </item>
-
-</layer-list>
+        android:drawable="@drawable/checkbox_rect_un"
+        android:state_checked="false"/>
+    <item
+        android:drawable="@drawable/checkbox_rect_sel"
+        android:state_checked="true"/>
+    <item android:drawable="@drawable/checkbox_rect_un"/>
+</selector>
