--- a/app/src/main/res/drawable/checkbox_rect_sel.xml
+++ b/app/src/main/res/drawable/checkbox_rect_sel.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <size android:height="16dp"/>
+            <size android:width="16dp"/>
+            <solid android:color="@color/White"/>
+            <stroke android:width="1dp" android:color="@color/TextGray"/>
+            <corners android:radius="4dp" />
+        </shape>
+    </item>
     <item
-        android:drawable="@drawable/checkbox_rect_un"
-        android:state_checked="false"/>
-    <item
-        android:drawable="@drawable/checkbox_rect"
-        android:state_checked="true"/>
-    <item android:drawable="@drawable/checkbox_rect_un"/>
-</selector>
+        android:drawable="@drawable/icon_check_green"
+        android:gravity="center">
+    </item>
+
+</layer-list>
