--- a/app/src/main/res/drawable/checkbox_rect_un.xml
+++ b/app/src/main/res/drawable/checkbox_rect_un.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <size android:height="16dp"/>
     <size android:width="16dp"/>
-    <solid android:color="#ffffff"/>
-    <stroke android:width="1dp" android:color="#9b9b9b"/>
+    <solid android:color="@color/White"/>
+    <stroke android:width="1dp" android:color="@color/TextGray"/>
     <corners android:radius="4dp" />
 </shape>
