--- a/app/src/main/res/drawable/circle_indicator_sel.xml
+++ b/app/src/main/res/drawable/circle_indicator_sel.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/Primary"/>
             <corners android:radius="5dp"/>
             <size android:height="10dp"/>
             <size android:width="10dp"/>
