--- a/app/src/main/res/drawable/outline_green.xml
+++ b/app/src/main/res/drawable/outline_green.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="#ffffff" />
     <corners android:radius="25dp"/>
-    <stroke android:width="1dp" android:color="@color/colorPrimary"/>
+    <stroke android:width="1dp" android:color="@color/Primary"/>
 </shape>
