--- a/app/src/main/res/drawable/outline_red.xml
+++ b/app/src/main/res/drawable/outline_red.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorWhite" />
+    <solid android:color="@color/White" />
     <corners android:radius="25dp" />
-    <stroke android:width="1dp" android:color="@color/colorAccent"/>
+    <stroke android:width="1dp" android:color="@color/Accent"/>
 </shape>
