--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/tb_main"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="@color/colorPrimary"
+                android:background="@color/Primary"
                 android:theme="?attr/actionBarTheme"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -120,7 +120,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="로그아웃"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/Primary"
                     android:textSize="11sp"
                     android:visibility="gone"
                     app:layout_constraintEnd_toEndOf="@id/bt_logout"
@@ -173,7 +173,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="7dp"
                             android:text="홍길동"
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/Primary"
                             android:textSize="16sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@id/iv_member"
@@ -233,7 +233,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="3dp"
                             android:text="로그인을 해주세요."
-                            android:textColor="@color/colorPrimary"
+                            android:textColor="@color/Primary"
                             android:textSize="15sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toEndOf="@id/iv_guest"
