--- a/app/src/main/res/layout/fragment_add_route_search.xml
+++ b/app/src/main/res/layout/fragment_add_route_search.xml
@@ -5,7 +5,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="@color/colorWhite">
+        android:background="@color/White">
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline1"
             android:layout_width="wrap_content"
