--- a/app/src/main/res/layout/fragment_register_terms.xml
+++ b/app/src/main/res/layout/fragment_register_terms.xml
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:button="@drawable/checkbox_round_sel"
+            android:button="@drawable/checkbox_round"
             android:paddingStart="10dp"
             app:layout_constraintTop_toBottomOf="@id/iv_agree"
             app:layout_constraintStart_toStartOf="@id/tv_agree"
