--- a/app/src/main/res/layout/item_route.xml
+++ b/app/src/main/res/layout/item_route.xml
@@ -146,7 +146,7 @@
             android:layout_marginRight="19dp"
             android:max="16"
             android:progress="10"
-            android:progressTint="@color/colorPrimary"
+            android:progressTint="@color/Primary"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
