--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -11,6 +11,10 @@
         <item>U+</item>
         <item>통신사</item>
     </string-array>
+    <string-array name="error">
+        <item>이런 고장이 나버렸네요!</item>
+        <item>다시 도를 선택해주세요.</item>
+    </string-array>
 
     <string-array name="state">
         <item>서울</item>
@@ -40,6 +44,38 @@
         <item>도봉구</item>
         <item>동대문구</item>
     </string-array>
-
+    
+    <string-array name="gyeonggi">
+        <item>가평군</item>
+        <item>고양시</item>
+        <item>광명시</item>
+        <item>광주시</item>
+        <item>구리시</item>
+        <item>군포시</item>
+        <item>김포시</item>
+        <item>남양주시</item>
+        <item>동두천시</item>
+        <item>부천시</item>
+        <item>성남시</item>
+        <item>수원시</item>
+        <item>시흥시</item>
+        <item>안산시</item>
+        <item>안성시</item>
+        <item>안양시</item>
+        <item>양주시</item>
+        <item>양평군</item>
+        <item>여주시</item>
+        <item>연천군</item>
+        <item>오산시</item>
+        <item>용인시</item>
+        <item>의왕시</item>
+        <item>의정부시</item>
+        <item>이천시</item>
+        <item>파주시</item>
+        <item>평택시</item>
+        <item>포천시</item>
+        <item>하남시</item>
+        <item>화성시</item>
+    </string-array>
 
 </resources>
