--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/Primary</item>
+        <item name="colorPrimaryDark">@color/PrimaryDark</item>
+        <item name="colorAccent">@color/Primary</item>
     </style>
 
     <style name="EtStyle">
@@ -12,7 +12,7 @@
         <item name="android:paddingTop">14dp</item>
         <item name="android:paddingBottom">14dp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/colorTextGray</item>
+        <item name="android:textColor">@color/TextGray</item>
     </style>
 
     <style name="EtLoginStyle">
@@ -22,8 +22,8 @@
         <item name="android:layout_marginEnd">18dp</item>
         <item name="android:paddingStart">24dp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/colorTextGray</item>
-        <item name="android:textColorHint">@color/colorTextGray</item>
+        <item name="android:textColor">@color/TextGray</item>
+        <item name="android:textColorHint">@color/TextGray</item>
         <item name="android:background">@drawable/outline_gray_cf</item>
     </style>
 
@@ -33,14 +33,14 @@
         <item name="android:layout_marginStart">18dp</item>
         <item name="android:layout_marginEnd">18dp</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/White</item>
     </style>
 
     <style name="EtRegStyle">
         <item name="android:layout_height">48dp</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/colorTextGray</item>
+        <item name="android:textColor">@color/TextGray</item>
     </style>
 
     <style name="EtAddRouteStyle">
@@ -52,7 +52,7 @@
         <item name="android:maxLines">1</item>
         <item name="android:imeOptions">actionSearch</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#535353</item>
+        <item name="android:textColor">@color/TextGray</item>
     </style>
 
     <style name="tvAddRouteStyle">
@@ -64,7 +64,7 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:maxLines">1</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:textColor">#535353</item>
+        <item name="android:textColor">@color/TextGray</item>
     </style>
 
     <style name="tvToolbarCategory">
@@ -74,7 +74,7 @@
         <item name="android:paddingTop">21dp</item>
         <item name="android:textSize">11sp</item>
         <item name="notoTextStyle">medium</item>
-        <item name="android:textColor">#818181</item>
+        <item name="android:textColor">@color/TextGray</item>
     </style>
 
     <style name="tvToolbarComponent">
@@ -87,7 +87,7 @@
         <item name="android:background">@drawable/selectable_item_background</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
-        <item name="android:textColor">@color/colorBlack</item>
+        <item name="android:textColor">@color/Black</item>
     </style>
 
     <style name="SpinnerTimePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
