배경 drawable 이름 수정, 메인 리사이클러 아이템 완성

--- a/app/src/main/res/layout/dialog_region_select.xml
+++ b/app/src/main/res/layout/dialog_region_select.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="300dp"
         android:layout_height="500dp"
-        android:background="@drawable/round_gray_f5"
+        android:background="@drawable/bg_dialog"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#000000"
+            android:background="#f3f3f3"
             app:layout_constraintStart_toEndOf="@id/rv_state"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
