--- a/app/src/main/res/layout/fragment_add_route_map.xml
+++ b/app/src/main/res/layout/fragment_add_route_map.xml
@@ -81,7 +81,7 @@
             android:id="@+id/layout_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/roundup_white"
+            android:background="@drawable/bg_roundup_white"
             android:clickable="true"
             android:elevation="10dp"
             android:focusable="true"
@@ -177,7 +177,7 @@
                 style="@style/btStyle"
                 android:layout_marginTop="23dp"
                 android:layout_marginBottom="30dp"
-                android:background="@drawable/round_green"
+                android:background="@drawable/bg_round_green"
                 android:onClick="@{mapSearchfrag::onConfirmClick}"
                 android:text="확인"
                 app:layout_constraintBottom_toBottomOf="@id/layout_location"
