--- a/app/src/main/res/layout/fragment_add_route_search.xml
+++ b/app/src/main/res/layout/fragment_add_route_search.xml
@@ -19,7 +19,7 @@
             android:layout_marginTop="10dp"
             android:singleLine="true"
             style="@style/EtAddRouteStyle"
-            android:background="@drawable/outline_green"
+            android:background="@drawable/bg_outline_green"
             android:text=""
             app:notoTextStyle="regular"
             app:layout_constraintBottom_toTopOf="@id/et_end"
@@ -43,7 +43,7 @@
             android:singleLine="true"
             android:text=""
             android:maxLines="1"
-            android:background="@drawable/outline_red"
+            android:background="@drawable/bg_outline_red"
             app:notoTextStyle="regular"
             app:layout_constraintTop_toBottomOf="@id/et_start"
             app:layout_constraintStart_toStartOf="parent"
