--- a/app/src/main/res/layout/dialog_term.xml
+++ b/app/src/main/res/layout/dialog_term.xml
@@ -14,7 +14,7 @@
             android:layout_marginBottom="30dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:background="@drawable/outline_green"
+            android:background="@drawable/bg_outline_green"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
