--- a/app/src/main/res/layout/dialog_time_picker.xml
+++ b/app/src/main/res/layout/dialog_time_picker.xml
@@ -35,7 +35,7 @@
             android:text="확인"
             android:textColor="@color/White"
             style="@style/EtStyle"
-            android:background="@drawable/round_green"
+            android:background="@drawable/bg_round_green"
 
             app:layout_constraintTop_toBottomOf="@id/timePicker"
             app:layout_constraintStart_toStartOf="parent"
