--- a/app/src/main/res/layout/fragment_add_route_time_set.xml
+++ b/app/src/main/res/layout/fragment_add_route_time_set.xml
@@ -37,7 +37,7 @@
             android:id="@+id/tv_start"
             style="@style/tvAddRouteStyle"
             android:layout_marginTop="36dp"
-            android:background="@drawable/outline_green"
+            android:background="@drawable/bg_outline_green"
             android:text="출발지"
             android:textSize="14sp"
             android:textColor="@color/TextGray"
@@ -60,7 +60,7 @@
             android:id="@+id/tv_end"
             style="@style/tvAddRouteStyle"
             android:layout_marginTop="12dp"
-            android:background="@drawable/outline_red"
+            android:background="@drawable/bg_outline_red"
             android:text="도착지"
             android:textSize="14sp"
             android:textColor="@color/TextGray"
@@ -87,7 +87,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="38dp"
-            android:background="@drawable/round_gray_e7"
+            android:background="@drawable/bg_round_gray_e7"
             android:onClick="@{AddRouteTimefrag::onTimeSetClick}"
             app:layout_constraintTop_toBottomOf="@id/tv_end"
             app:layout_constraintStart_toStartOf="@id/tv_end"
