--- a/app/src/main/res/layout/fragment_find_password.xml
+++ b/app/src/main/res/layout/fragment_find_password.xml
@@ -47,7 +47,7 @@
         <com.thustop_00.widgets.NotoButton
             android:id="@+id/bt_confirm"
             style="@style/btStyle"
-            android:background="@drawable/round_green"
+            android:background="@drawable/bg_round_green"
             android:text="@string/bt_IssuePass_find"
             android:textColor="@color/White"
             android:textSize="16sp"
