--- a/app/src/main/res/layout/fragment_request_town_service.xml
+++ b/app/src/main/res/layout/fragment_request_town_service.xml
@@ -50,7 +50,7 @@
             android:id="@+id/cl_townSel"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:background="@drawable/outline_green"
+            android:background="@drawable/bg_outline_green"
             android:clickable="true"
             android:focusable="true"
             android:onClick="@{RequestTownFrag::onRegionSelectClick}"
@@ -87,7 +87,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:paddingStart="30dp"
-            android:background="@drawable/round_gray_f5"
+            android:background="@drawable/bg_round_gray_f5"
             android:hint="@string/et_town_hint"
             android:textSize="14dp"
             android:inputType="numberDecimal"
@@ -112,7 +112,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="40dp"
-            android:background="@drawable/round_green"
+            android:background="@drawable/bg_round_green"
             android:text="@string/bt_town_request"
             android:onClick="@{RequestTownFrag::onRequestClick}"
             app:layout_constraintBottom_toBottomOf="parent"
