--- a/app/src/main/res/layout/item_route.xml
+++ b/app/src/main/res/layout/item_route.xml
@@ -14,18 +14,28 @@
         android:layout_marginStart="18dp"
         android:layout_marginTop="11dp"
         android:layout_marginEnd="18dp"
-        android:background="@drawable/outline_gray_fa_ee"
+        android:background="@drawable/bg_outline_gray_fa_ee"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/iv_mrv_route_line"
+            android:layout_width="wrap_content"
+            android:layout_height="102dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.20"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_mrv_bus"
+            app:srcCompat="@drawable/icon_route_line" />
+
+        <ImageView
             android:id="@+id/iv_mrv_bus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="14dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toStartOf="@id/iv_mrv_route_line"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/icon_bus_green" />
 
@@ -33,158 +43,184 @@
             android:id="@+id/tv_mrv_code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="6dp"
             android:text="A15"
             android:textColor="#171d33"
-            android:textSize="18sp"
-            app:notoTextStyle="bold"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@id/iv_mrv_bus"
             app:layout_constraintStart_toEndOf="@id/iv_mrv_bus"
-            app:layout_constraintTop_toTopOf="@id/iv_mrv_bus" />
-
-        <ImageView
-            android:id="@+id/iv_mrv_departure"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_mrv_bus"
-            app:srcCompat="@drawable/icon_departure" />
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_bus"
+            app:notoTextStyle="medium" />
 
         <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_mrv_stime"
+            android:id="@+id/tv_mrv_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:text="10/16"
+            android:textColor="#b4b4b4"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_mrv_state"
+            app:layout_constraintStart_toEndOf="@id/tv_mrv_state"
+            app:layout_constraintTop_toTopOf="@id/tv_mrv_state"
+            app:notoTextStyle="medium" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_mrv_time_departure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="3dp"
             android:text="7:15"
-            android:textColor="#171d33"
-            android:textSize="13sp"
-            app:notoTextStyle="regular"
-            app:layout_constraintBottom_toBottomOf="@id/iv_mrv_departure"
-            app:layout_constraintStart_toEndOf="@id/iv_mrv_departure"
-            app:layout_constraintTop_toTopOf="@id/iv_mrv_departure" />
+            android:textColor="@color/TextBlack"
+            android:textSize="9sp"
+            app:layout_constraintEnd_toStartOf="@id/iv_mrv_route_line"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="regular" />
 
         <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_mrv_departure"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_mrv_departure1"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="선릉역 1번 출구"
-            android:textColor="#757f8c"
-            android:textSize="13sp"
-            app:notoTextStyle="regular"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_mrv_departure"
-            app:layout_constraintStart_toEndOf="@id/tv_mrv_stime"
-            app:layout_constraintTop_toTopOf="@+id/iv_mrv_departure" />
-
-        <ImageView
-            android:id="@+id/iv_mrv_destination"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_mrv_departure"
-            app:srcCompat="@drawable/icon_destination" />
+            android:layout_marginStart="9dp"
+            android:maxLines="2"
+            android:text="수원역"
+            android:textColor="@color/TextBlack"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@id/iv_mrv_route_line"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="bold" />
 
         <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_mrv_etime"
+            android:id="@+id/tv_mrv_departure2"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:maxLines="2"
+            android:text="우만4단지"
+            android:textColor="@color/TextBlack"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@id/tv_mrv_departure1"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="regular" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_mrv_departure3"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="68dp"
+            android:maxLines="2"
+            android:text="경기대후문"
+            android:textColor="@color/TextBlack"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@id/tv_mrv_departure1"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="regular" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_mrv_time_arrive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="9dp"
             android:text="7:15"
-            android:textColor="#171d33"
-            android:textSize="13sp"
-            app:notoTextStyle="regular"
-            app:layout_constraintBottom_toBottomOf="@id/iv_mrv_destination"
-            app:layout_constraintStart_toEndOf="@id/iv_mrv_destination"
-            app:layout_constraintTop_toTopOf="@id/iv_mrv_destination" />
+            android:textColor="@color/TextBlack"
+            android:textSize="9sp"
+            app:layout_constraintEnd_toEndOf="@id/iv_mrv_route_line"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="regular" />
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_destination"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="수원 성균관대학교"
-            android:textColor="#757f8c"
-            android:textSize="13sp"
-            app:notoTextStyle="regular"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_mrv_destination"
-            app:layout_constraintStart_toEndOf="@id/tv_mrv_etime"
-            app:layout_constraintTop_toTopOf="@+id/iv_mrv_destination" />
+            android:layout_marginStart="4dp"
+            android:maxLines="2"
+            android:text="미사강변도시\n리버스위트칸타빌.리슈빌"
+            android:textColor="@color/TextBlack"
+            android:textSize="10sp"
+            app:layout_constraintStart_toEndOf="@id/iv_mrv_route_line"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="bold" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_mrv_destination2"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:maxLines="2"
+            android:text="잠실역2번출구"
+            android:textColor="@color/TextBlack"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@id/tv_mrv_destination"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="regular" />
+
+        <com.thustop_00.widgets.NotoTextView
+            android:id="@+id/tv_mrv_destination3"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="68dp"
+            android:maxLines="2"
+            android:text="판교 테크노벨리"
+            android:textColor="@color/TextBlack"
+            android:textSize="10sp"
+            app:layout_constraintStart_toStartOf="@id/tv_mrv_destination"
+            app:layout_constraintTop_toTopOf="@id/iv_mrv_route_line"
+            app:notoTextStyle="regular" />
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_state"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="19dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginStart="11dp"
+            android:width="37dp"
+            android:height="16dp"
+            android:background="@drawable/bg_route_state_operating"
+            android:gravity="center"
             android:text="운행중"
-            android:textColor=" #535353"
-            android:textSize="11sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_mrv_destination"
+            android:textColor="@color/White"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_mrv_code"
+            app:layout_constraintStart_toEndOf="@id/tv_mrv_code"
+            app:layout_constraintTop_toTopOf="@id/tv_mrv_code"
             app:notoTextStyle="regular"
             tools:ignore="SmallSp" />
-
-        <com.thustop_00.widgets.NotoTextView
-            android:id="@+id/tv_mrv_nump"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="10/16"
-            android:textColor="#b4b4b4"
-            android:textSize="11sp"
-            app:layout_constraintBottom_toTopOf="@id/pb_mrv_progress"
-            app:layout_constraintRight_toRightOf="@id/pb_mrv_progress"
-            app:notoTextStyle="medium" />
-
-        <ProgressBar
-            android:id="@+id/pb_mrv_progress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="19dp"
-            android:layout_marginRight="19dp"
-            android:max="16"
-            android:progress="10"
-            android:progressTint="@color/Primary"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_mrv_state" />
-
-        <ImageView
-            android:id="@+id/iv_mrv_calendar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/pb_mrv_progress"
-            app:srcCompat="@drawable/icon_calendar" />
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_days"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="3dp"
             android:text="월요일-금요일"
-            android:textColor=" #757f8c"
-            android:textSize="11sp"
-            app:notoTextStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/iv_mrv_calendar"
-            app:layout_constraintStart_toEndOf="@id/iv_mrv_calendar"
-            app:layout_constraintTop_toTopOf="@id/iv_mrv_calendar" />
+            android:textColor="@color/TextBlack"
+            android:textSize="9sp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_mrv_running"
+            app:layout_constraintEnd_toStartOf="@id/tv_mrv_running"
+            app:notoTextStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="3dp"
+            app:layout_constraintBottom_toBottomOf="@id/tv_mrv_days"
+            app:layout_constraintEnd_toStartOf="@id/tv_mrv_days"
+            app:layout_constraintTop_toTopOf="@id/tv_mrv_days"
+            app:srcCompat="@drawable/icon_calendar" />
 
         <com.thustop_00.widgets.NotoTextView
             android:id="@+id/tv_mrv_running"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="3dp"
             android:text="운행"
-            android:textSize="11sp"
-            app:notoTextStyle="regular"
-            app:layout_constraintBottom_toBottomOf="@id/tv_mrv_days"
-            app:layout_constraintStart_toEndOf="@id/tv_mrv_days"
-            app:layout_constraintTop_toTopOf="@id/tv_mrv_days" />
+            android:textColor="@color/TextBlack"
+            android:textSize="9sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:notoTextStyle="regular" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
