타임피커다이얼로그 배경없애봄(근데 그림자때문에 일단 좀 티남)//이용내역,이용내역-히스토리, 이용내역-티켓 틀 잡고 연결// 인트로 페이지 첫 실행만 뜨게 변경함

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -182,6 +182,7 @@
                 android:bufferType="spannable"
                 android:text="@string/tv_local1"
                 android:textColor="@color/TextBlack"
+                app:notoTextStyle="bold"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@id/layout_local"
                 app:layout_constraintStart_toStartOf="@id/layout_local"
