--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -281,7 +281,8 @@
                         style="@style/tvToolbarComponent"
                         android:text="이용내역"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_personal_modify" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_personal_modify"
+                        android:onClick="@{activity_main::onNavPersonalHistoryClick}"/>
 
                     <com.thustop_00.widgets.NotoTextView
                         android:id="@+id/tv_personal_point"
