--- a/app/src/main/res/layout/dialog_time_picker.xml
+++ b/app/src/main/res/layout/dialog_time_picker.xml
@@ -4,71 +4,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        app:layout_constraintTop_toTopOf="@id/title">
-
-        <TimePicker
-            android:id="@+id/timePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:timePickerMode="spinner"
-            android:layout_gravity="center"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:descendantFocusability="blocksDescendants"/>
-
-        <com.thustop_00.widgets.NotoButton
-            android:id="@+id/bt_ok"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"
-            android:text="확인"
-            android:textColor="@color/White"
-            style="@style/EtStyle"
-            android:background="@drawable/bg_round_green"
-
-            app:layout_constraintTop_toBottomOf="@id/timePicker"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <com.thustop_00.widgets.NotoTextView
         android:id="@+id/title"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="46dp"
         android:gravity="center"
-        android:textColor="#ffffff"
-        android:textSize="16dp"
-        android:text="시간 설정"
-        android:background="@color/Primary"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:text="희망 도착시간"
+        android:background="@drawable/bg_round_top_white"
         android:layout_gravity="center"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <ImageView
-        android:id="@+id/iv_back"
+        app:layout_constraintBottom_toTopOf="@id/timePicker"
+        app:layout_constraintStart_toStartOf="@id/timePicker"
+        app:layout_constraintEnd_toEndOf="@id/timePicker"/>
+    <TimePicker
+        android:id="@+id/timePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:layout_marginStart="10dp"
-        android:src="@drawable/icon_back_white"
-        app:layout_constraintTop_toTopOf="@id/title"
-        app:layout_constraintBottom_toBottomOf="@id/title"
+        android:background="@color/White"
+        android:timePickerMode="spinner"
+        android:layout_gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintStart_toStartOf="parent"
-        android:clickable="true"
-        />
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bt_ok"
+        android:descendantFocusability="blocksDescendants"/>
+    <com.thustop_00.widgets.NotoButton
+        android:id="@+id/bt_ok"
+        android:layout_width="0dp"
+        android:layout_height="54dp"
+        android:text="확인"
+        android:textSize="14sp"
+        android:textColor="@color/White"
+        android:background="@drawable/bg_round_btm_green"
+        app:layout_constraintTop_toBottomOf="@id/timePicker"
+        app:layout_constraintStart_toStartOf="@id/timePicker"
+        app:layout_constraintEnd_toEndOf="@id/timePicker" />
 </androidx.constraintlayout.widget.ConstraintLayout>
