--- a/app/src/main/res/drawable/bg_ticket_green.xml
+++ b/app/src/main/res/drawable/bg_ticket_green.xml
@@ -12,7 +12,7 @@
 
     <item android:left="20dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/White"/>
+            <solid android:color="@color/ContainerTint"/>
             <corners android:topRightRadius="15dp"
                 android:bottomRightRadius="15dp"/>
         </shape>
@@ -20,7 +20,7 @@
     <item>
         <shape android:shape="rectangle">
             <stroke android:width="1dp"
-                android:color="#f5f5f5"/>
+                android:color="@color/ContainerStroke"/>
             <corners android:radius="13dp"/>
         </shape>
     </item>
