--- a/app/src/main/res/layout/dialog_time_picker.xml
+++ b/app/src/main/res/layout/dialog_time_picker.xml
@@ -14,6 +14,7 @@
         android:text="희망 도착시간"
         android:background="@drawable/bg_round_top_white"
         android:layout_gravity="center"
+        style="?android:attr/text"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/timePicker"
         app:layout_constraintStart_toStartOf="@id/timePicker"
@@ -38,6 +39,7 @@
         android:textSize="14sp"
         android:textColor="@color/White"
         android:background="@drawable/bg_round_btm_green"
+        style="?android:attr/borderlessButtonStyle"
         app:layout_constraintTop_toBottomOf="@id/timePicker"
         app:layout_constraintStart_toStartOf="@id/timePicker"
         app:layout_constraintEnd_toEndOf="@id/timePicker" />
