--- a/app/src/main/res/drawable/bg_outline_red.xml
+++ b/app/src/main/res/drawable/bg_outline_red.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <solid android:color="@color/White" />
     <corners android:radius="25dp" />
-    <stroke android:width="1dp" android:color="@color/Accent"/>
+    <stroke android:width="1dp" android:color="@color/Red"/>
 </shape>
