--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -289,7 +289,8 @@
                         style="@style/tvToolbarComponent"
                         android:text="포인트"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_personal_history" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_personal_history"
+                        android:onClick="@{activity_main::onNavPesonalPointClick}"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
