배경으로 사용하는 drawable 이름 수정, 툴바 설정 함수 갈아 엎음(setTitle, setToolbarVisibility 함수와 통합 및 조금 더 직관적으로 설정할 수 있도록 변경)

--- a/app/src/main/res/layout/dialog_region_select.xml
+++ b/app/src/main/res/layout/dialog_region_select.xml
@@ -42,7 +42,7 @@
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="#f3f3f3"
+            android:background="@color/Stroke"
             app:layout_constraintStart_toEndOf="@id/rv_state"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
