--- a/app/src/main/res/layout/fragment_add_route_map.xml
+++ b/app/src/main/res/layout/fragment_add_route_map.xml
@@ -177,7 +177,7 @@
                 style="@style/btStyle"
                 android:layout_marginTop="23dp"
                 android:layout_marginBottom="30dp"
-                android:background="@drawable/bg_round_green"
+                android:background="@drawable/bg_round25_green"
                 android:onClick="@{mapSearchfrag::onConfirmClick}"
                 android:text="확인"
                 app:layout_constraintBottom_toBottomOf="@id/layout_location"
